style.css
.starter-template {
	padding: 40px 15px;
	text-align: center;
}

a {
	text-decoration: none;
	color: #002a40;
}

ol, ul {
	list-style: none;
}

div {
	display: block;
}

body, html {
	font-family: 'Century Gothic', sans-serif !important;
}

h1 {
	font-size: 60px;
	color: cadetblue;
}

h2 {
	text-align: center;
	color: cadetblue;
}

div {
	display: block;
}

p {
	color: grey;
}

.lead {
	text-align: left;
}

.lead1 {
	text-align: left;
	padding-bottom: 40px;
}

hr {
	clear: both;
	color: cadetblue;
	background-color: cadetblue;
	height: 5px;
	border-width: 0;
}

.line2 {
	clear: both;
	color: grey;
	background-color: grey;
	height: 1px;
	border-width: 0;
	width: 35%;
}

.hr-standard {
	clear: both;
	color: grey;
	background-color: grey;
	height: 1px;
	border-width: 0;
	width: 100%;
}

.section {
	display: block;
	padding-bottom-top: 30px;
	padding-top: 30px;
}

#button {
	text-align: center;
}

.column {
	text-align: center;
}

/*Banner and menu*/

#website-title {
	font-size: 60px;
	font-weight: bold;
	float: left;
	margin-left: 40px;
	margin-top: 40px;
	color: white;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#menu-opener {
	display: none;
	position: absolute;
	top: 35px;
	right: 35px;
	z-index: 1000;
	color: #fff;
	font-size: 25px;
	cursor: pointer;
}

.fa {
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
}

#body {
	margin: 0 auto 0 auto;
	text-align: left;
}

#outer {
	width: 100%;
	padding: 0;
	margin: 0 auto 0 auto;
}

#wrapper {
	text-align: left;
	padding: 0;
	margin: 0 auto 0 auto;
	background-color: #ffffff;
}

#header-wrapper {
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	position: relative;
	overflow: hidden;
	width: 100%;
	height: 400px;
	text-align: center;
}

/* Dropdown Button */
.dropbtn {
	background-color: cadetblue;
	color: white;
	padding: 10px;
	font-size: 14px;
	border: none;
	cursor: pointer;
}

/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
	background-color: lightblue;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
	position: relative;
	display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
	display: none;
	position: absolute;
	background-color: #f9f9f9;
	min-width: 77px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

/* Links inside the dropdown */
.dropdown-content a {
	color: black;
	padding: 8px 8px;
	text-decoration: none;
	display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
	display:block;
}

#language-menu {
	top: 10px;
	position: absolute;
	right: 20px;
}

#lang_sel {
	margin-right: 15px;
	margin-top: 15px;
	height: 32px;
	position: relative;
	z-index: 99;
	font-family: verdana, arial, sans-serif;
	float: right;
	top: 2px;
}

#lang_sel li {
	float: left;
	width: 149px;
	position: relative;
}

#lang_sel ul, #lang_sel li {
	padding: 0 !important;
	margin: 0 !important;
	list-style-type: none !important;
}

#lang_sel img.iclflag {
	width: 18px;
	height: 12px;
	position: relative;
	top: 1px;
}

/*End Banner*/

/*Check Availibility Overlay */

/* The Overlay (background) */
.overlay {
	/* Height & width depends on how you want to reveal the overlay (see JS below) */    
	height: 100%;
	width: 0;
	position: fixed; /* Stay in place */
	z-index: 21; /* Sit on top */
	left: 0;
	top: 0;
	background-color: cadetblue; /* Black fallback color */
	overflow-x: hidden; /* Disable horizontal scroll */
	transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
}

/* Position the content inside the overlay */
.overlay-content {
	position: relative;
	top: 25%; /* 25% from the top */
	width: 100%; /* 100% width */
	text-align: center; /* Centered text/links */
	margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
}

/* The navigation links inside the overlay */
.overlay a {
    padding: 8px;
    text-decoration: none;
    font-size: 24px;
    color: white;
    display: block; /* Display block instead of inline */
    transition: 0.3s; /* Transition effects on hover (color) */
}

#title-overlay {
	font-size: 36px;
	color: white;
	display: block;
	padding: 8px;
	transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.overlay a:hover, .overlay a:focus {
	color: #f1f1f1;
}

/* Position the close button (top right corner) */
.overlay .closebtn {
	position: absolute;
	top: 20px;
	left: 45px;
	font-size: 60px;
}

/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
@media screen and (max-height: 450px) {
	.overlay a {font-size: 20px}
	.overlay .closebtn {
		font-size: 40px;
		top: 15px;
		right: 35px;
	}
}

.overlay-button {
	font-size: 30px;
	cursor: pointer;
	color: white;
	border-radius: 12px;
	background-color: cadetblue;
	float: right;
	margin-top: 17%;
	margin-right: 25px;
}

/*Reservation*/

.contact-form{ 
	margin-top:15px;
}

.form-control{ 
	box-shadow:none; 
	border-color:grey; 
	height:49px;
}

label {
	color: white;
}

.row2 {
	display: inline-block;
	width: 100%;
	margin-left: 25%;
}

.overlay-button1 {
	cursor: pointer;
	color: white;
	border-radius: 12px;
	background-color: teal;
}

/* End Overlay */

/*Navbar*/

.navbar {
	border-radius: 2px;
	margin-right: auto;
	margin-left: auto;
	width: 100%;
	top: 0;
	z-index: 20;
}

.navbar-brand {
	font-size: 24px;
	margin-left: 20px;
	color: white !important;
}

.nav.navbar-nav.navbar-middle li a {
	color: white;
}

.active1 {
	margin-right: 20px;
	margin-left: 390px;
	font-size: 24px;
}

@media (max-width: 1600px) {
	.active1 {
		margin-left: 150px;
	}
}

@media (max-width: 1280px) {
	.active1 {
		margin-left: 50px;
	}
}

@media (max-width: 1130px) {
	.active1 {
		margin: 0px;
	}
}

.buttons {
	margin-right: auto;
	margin-left: auto;
	font-size: 24px;
	text-align: center;
}

/* End Navbar */

.back-top {
	font-size: 24px;
	color: grey;
	float: right;
}

/*Carousel*/
.carousel {
	height: auto;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 60px;
	position: relative;
}

/* Since positioning the image, we need to help out the caption */
.carousel-caption {
	z-index: 10;
}

.carousel-caption p {
	margin-bottom: 20px;
	font-size: 21px;
	line-height: 1.4;
}

/* Declare heights because of positioning of img element */
.carousel .item {
	height: 600px;
	background-color: black;
}
.carousel-inner > .item > img {
	position: absolute;
	top: 0;
	left: 0;
	min-width: 100%;
	height: 100%;
}

@media screen and (min-width: 768px)
.carousel-indicators {
	bottom: 20px;
}
/*End Carousel*/


/* COLUMN*/

.column {
	color: grey;
}

/*Maps*/

.maps {
	float: center;
}

.content {
	float: left;
	padding-right: 150px;
}


/*Score circle*/

#container {
	margin: 20px;
	width: 200px;
	height: 200px;
	font-size: 30px;
	float: left;
	display: inline-block;
	margin-left: 19%;
	margin-top: 5%;
}

.score {
	float: left;
	padding-left: 80px;
}

#container1 {
	width: 90px;
	height: 90px;
	font-size: 24px;
	display: inline-block;
	margin-left: 30%;
	margin-bottom: 40px;
}

#container2 {
	width: 90px;
	height: 90px;
	font-size: 24px;
	display: inline-block;
	margin-left: 30%;
	margin-bottom: 40px;
}

#container3 {
	width: 90px;
	height: 90px;
	font-size: 24px;
	display: inline-block;
	margin-left: 24%;
	margin-bottom: 40px;
}

/*End Score Circle*/

/*Score breakdown*/
.score-breakdown {
	max-width: 30em;
	margin: 0 auto;
}
.clearfix {
	overflow: hidden;
	display: inline-block;
	display: block;
}

.pg-review .score-breakdown-title {
	font-weight: bold;
}

.pg-review .score-label-text, .pg-review .score-breakdown-title {
	text-transform: uppercase;
	letter-spacing: 1px;
	font-size: .75em;
}

.score-breakdown-title {
	text-align: center;
	margin-bottom: 1em;
}

.score-category {
	margin-bottom: 1.25em;
}

.pg-review .score-label {
	padding-bottom: .25em;
}

.score-label-text {
	float: left;
	box-sizing: border-box;
	-o-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	padding-left: .25em;
}

.pg-review .score-label-value {
	line-height: 1;
}

.score-label-value {
	float: right;
	box-sizing: border-box;
	-o-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	padding-right: .25em;
	font-weight: bold;
}

.score-meter {
	height: 8px;
	position: relative;
	background: #eee;
	-webkit-border-radius: 25px;
	-moz-border-radius: 25px;
	border-radius: 25px;
	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
	-moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
	box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
}

.pg-review .score-meter>span {
	background: #b62020;
}

.score-meter>span {
	display: block;
	height: 100%;
	-webkit-border-radius: 25px;
	-moz-border-radius: 25px;
	border-radius: 25px;
	background-color: lightblue;
	position: relative;
	overflow: hidden;
}

.clearfix:before, .clearfix:after {
	content: " ";
	display: table;
}

.content-body-inner {
	box-sizing: border-box;
	-o-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	padding: 1em;
	padding-left: 5%;
	float: left;
	width: 50%;
	padding-bottom: 60px;
}

.pg-review .aggregate-score {
	margin-bottom: 2em;
}

.aggregate-score {
	text-align: center;
	position: relative;
}

/*End Score Breakdown*/

/*Reviews*/

.starter-template1 {
	-webkit-column-count: 2; /* Chrome, Safari, Opera */
	-moz-column-count: 2; /* Firefox */
	column-count: 2;
	padding-bottom: 40px;
	padding-top: 20px;
	column-gap: 20px;
}

.name {
	float: left;
	font-size: 20px;
}

.content-text {
	float: left;
	display: inline-block;
	text-align: right;
}

/*End Reviews*/

.back-top {
	font-size: 24px;
	color: grey;
	float: right;
	margin-right: 18%;
}

/*Footer*/
@media (max-width: 950px)
#footer, #content-pages, #pre-footer, #pre-footer img, .devide img, .devide {
	width: 100%;
}

#footer {
	margin: 0 auto;
	background-color: #ffffff;
	width: 960px;
	height: 30px;
	color: #646464;
	font-size: 1.1em;
	margin-bottom: 10px;
	text-align: center;
	margin-top: 40px;
}

#footer .left {
	width: auto;
}

#footer ul {
	list-style: none;
	margin: 0;
	padding: 15px 0px;
}

#footer li {
	display: inline-block;
	padding: 0 4px;
	width: auto;
}

#footer a {
	color: #646464;
	text-decoration: underline;
}

.icon {
	width: 50px;
	height: auto;
}

#footer .right {
	width: auto;
	color: #a4a4a4;
	font-size: 20px;
}

#footer ul {
	list-style: none;
	margin: 0;
	padding: 15px 0px;
}

#footer li {
	display: inline-block;
	padding: 0 4px;
	width: auto;
}

/* End Footer */

